syntax = "proto3";

package ai.metathings.service.deviced;

option go_package = "deviced";

import "validate/validate.proto";

import "model.proto";

message RemoveObjectRequest {
	OpObject object = 1 [(validate.rules).message.required = true];
}
